// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App mount rendering  matches the snapshot 1`] = `
<Home>
  <div
    className="App"
  >
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
    <h3
      className="blue"
    >
      Everyone is Welcome
    </h3>
    <p
      className="lifeCycle"
    >
      componentDidMountut
    </p>
    <p
      className="button-state"
    >
      No!
    </p>
    <button
      onClick={[Function]}
    >
      Click
    </button>
    <h2 />
    <input
      onChange={[Function]}
      type="text"
    />
  </div>
</Home>
`;

exports[`App shallow rendering matches the snapshot 1`] = `
<div
  className="App"
>
  <h1
    className="App-title"
  >
    Welcome to React
  </h1>
  <h3
    className="blue"
  >
    Everyone is Welcome
  </h3>
  <p
    className="lifeCycle"
  >
    componentDidMountut
  </p>
  <p
    className="button-state"
  >
    No!
  </p>
  <button
    onClick={[Function]}
  >
    Click
  </button>
  <h2 />
  <input
    onChange={[Function]}
    type="text"
  />
</div>
`;
